# feather-light

./: .editorconfig  .gitignore  CI&CD.yml  CI.yml  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: CI&CD.yml
src/: README.md
src/app/: main.py
src/app/auth/: auth.py
src/app/crud/: attachment_to_project_model_crud.py  generic_crud.py  project_crud.py  user_crud.py  user_to_project_table_crud.py
src/app/db/: db.py
src/app/documents/: aws-s3.py  aws_s3.py
src/app/models/: attachment_to_project_table.py  project_table.py  user_table.py  user_to_project_table.py
src/app/models/db/: db.py
src/app/requests/: attachment_to_project_model.py  project_model.py  user_model.py  user_to_project_model.py
src/app/routers/: auth_router.py  document_router.py  project_router.py
tests/: main_test.py
